2005-08-18	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.{c,h}, docs/reference/tmpl/exo-icon-view.sgml:
	  Import the new ExoIconView class, which provides a compatible
	  interface to the GtkIconView class in Gtk+ 2.8 (using cell
	  renderers instead of hardcoding the renderering in the icon
	  view). The icon view should be faster now, especially the
	  rubberband painting should be atleast twice as fast (given that
	  you don't use Gtk+ 2.8 with Cairo).
	* exo/exo-mime-database.{c,h}, exo/exo-mime-info.{c,h},
	  exo/xdgmime/, exo/Makefile.am, configure.in.in, exo/exo.h,
	  po/POTFILES.in: Remove the MIME database implementation, as
	  ThunarVFS contains a thread-safe replacement now.
	* configure.in.in, exo/, python/: Use ELF visibility if supported
	  by the compiler and the linker.
	* exo/: Fix several signedness warnings produced by gcc41.
	* python/: Remove the MIME implementation from the Python bindings
	  and add the new icon view methods.
	* po/libexo-0.3.pot: Ditch autogenerated file.
	* exo-csource/Makefile.am: Build the exo-csource tool on 'gmake
	  distcheck', as it's required to successfully 'gmake distcheck'
	  in tests/.

2005-08-14	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Add fi translations to XDT_I18N().
	* po/POTFILES.in: Add missing source files.

2005-08-11	Benedikt Meurer <benny@xfce.org>

	* exo/exo-object-generic.c, exo/exo-object-i386.S, exo/exo-object.c:
	  Better let the compiler handle the exo_object_new() and
	  exo_object_unref() methods, so we don't need to care about
	  text relocations.

2005-08-05	Benedikt Meurer <benny@xfce.org>

	* exo/exo-object.h: Reserve two pointers for ExoObject.

2005-08-04	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Merge debug support from Thunar. Add check for
	  target platform, supports only i386 currently.
	* exo/exo-noop-generic.c, exo/exo-noop-i386.S, exo/exo-noop.h: Add
	  commonly used noops.
	* exo/exo.h: Include exo-object.h and exo-noop.h.