@@ -1,3 +1,11 @@
+2005-08-19	Benedikt Meurer <benny@xfce.org>
+
+	* configure.in.in, exo/exo-xsession-client.c: Drop dependency on X11.
+	  Acts as a dummy on other GDK targets.
+	* configure.in.in, docs/reference/Makefile.am, exo/Makefile.am,
+	  exo/exo-0.3.pc.in, exo/exo.h, python/Makefile.am, tests/Makefile.am:
+	  Drop unnecessary dependency on libxfcegui4.
+
 2005-08-18	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-icon-view.{c,h}, docs/reference/tmpl/exo-icon-view.sgml:
